<resources>
    <string name="app_name">Stocks</string>
    <string name="app_name_ui">Stocks UI</string>
    <string name="app_name_demo">Stocks Demo</string>
    <string name="title_delete_location">Remove location</string>
    <string name="title_add_item">Add %1$s</string>
    <string name="title_edit_item">Edit %1$s</string>
    <string name="title_consume">Consume</string>
    <string name="title_delete_food">Remove food?</string>
    <string name="title_new_sync">Complete Sync</string>
    <string name="title_crash_logs">Crash Reports</string>
    <string name="title_settings">Settings</string>
    <string name="title_remove">Remove</string>
    <string name="title_barcode">Barcodes</string>
    <string name="title_barcode_fragment">Barcodes for %1$s</string>
    <string name="title_delete_barcode">Remove barcode</string>
    <string name="title_qr_code_content_desc">QR Code</string>
    <string name="title_error">Error</string>
    <string name="title_errors">Errors</string>
    <string name="title_principals">User information</string>
    <string name="title_camera_permission">Camera Permission</string>
    <string name="title_new_barcode">New barcode for&#8230;</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_qr_code_scan">Stocks Registration</string>
    <string name="title_add_to_cart">Add to shopping list</string>
    <string name="title_remove_from_cart">Remove from shopping list</string>
    <string name="title_hostname">Hostname</string>
    <string name="title_caport">CA Port</string>
    <string name="title_registration_port">Registration Port</string>
    <string name="title_server_port">Main Port</string>
    <string name="title_connection">Connection</string>
    <string name="title_troubleshooting">Troubleshooting</string>
    <string name="title_expiration_offset">Default expiration period</string>
    <string name="title_clear_search_history">Clear Search History</string>
    <string name="title_location">Default Location</string>
    <string name="title_recent_activity">Recent Activity</string>
    <string name="title_show_history">Show history</string>
    <string name="title_food_activity">Activity on %1$s</string>
    <string name="title_charts">Statistics</string>
    <string name="title_food_count_chart">Amount over time</string>
    <string name="title_food_histogram">How long before expiration were how many items consumed?</string>
    <string name="title_description">Edit description</string>
    <string name="title_units">Units of Measure</string>
    <string name="title_unit_activity">Activity on Units of Measure</string>
    <string name="title_default_unit">Default Unit</string>
    <string name="title_unit">Unit of Measure</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="title_edit_recipe">Edit Recipe</string>
    <string name="title_products">Products</string>
    <string name="title_duration">Time</string>
    <string name="title_cook_recipe">Prepare Recipe</string>
    <string name="title_add_location">Add Location</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="title_conflict">Solve Conflict</string>
    <string name="title_add_food">Add Food</string>
    <string name="title_edit_food">Edit Food</string>
    <string name="title_all_food">To Eat Soon</string>
    <string name="title_add_grocery_chain">Add Grocery Chain</string>
    <string name="title_add_grocery_store">Add %1$s Store</string>
    <string name="title_add_price">Add Price</string>
    <string name="title_edit_grocery_chain">Edit Grocery Chain</string>
    <string name="title_edit_grocery_store">Edit %1$s Store</string>
    <string name="title_grocery_store">Store</string>
    <string name="title_date">Date</string>
    <string name="title_price">Price</string>
    <string name="title_all_prices">All Prices</string>
    <string name="action_users">Users</string>
    <string name="action_locations">Locations</string>
    <string name="action_grocery_chains">Grocery</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_save_and_continue">Save and Continue</string>
    <string name="action_add_more">Add more</string>
    <string name="action_missing_food">Missing food</string>
    <string name="action_eat_next">What to eat next</string>
    <string name="action_scan">Scan barcode</string>
    <string name="action_continue">Continue</string>
    <string name="action_undo">UNDO</string>
    <string name="action_back">Back</string>
    <string name="action_shopping_list">Shopping List</string>
    <string name="action_events">Activity</string>
    <string name="action_units">Units of Measure</string>
    <string name="action_today">TODAY</string>
    <string name="action_predict">PREDICT</string>
    <string name="action_recipes">Recipes</string>
    <string name="action_sort">Sort</string>
    <string name="action_scan_qr">SCAN QR CODE</string>
    <string name="action_manual">MANUAL</string>
    <string name="action_checkout">Prepare</string>
    <string name="action_delete">Delete</string>
    <string name="action_retry">Retry</string>
    <string name="action_add">ADD</string>
    <string name="action_grocery">Grocery</string>
    <string name="action_show_all">SHOW ALL</string>
    <string name="hint_servername">Server host name</string>
    <string name="hint_expert">Expert options</string>
    <string name="hint_caport">CA port (10910)</string>
    <string name="hint_ticket_port">Ticket port (10911)</string>
    <string name="hint_server_port">Server port (10912)</string>
    <string name="hint_username">User name</string>
    <string name="hint_device_name">Device name</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_device_id">Device ID</string>
    <string name="hint_fingerprint">Fingerprint</string>
    <string name="hint_ticket">Ticket</string>
    <string name="hint_location">Location</string>
    <string name="hint_food">Food name</string>
    <string name="hint_new_name">New name</string>
    <string name="search_hint">Search Food</string>
    <string name="hint_original">Original</string>
    <string name="hint_remote">Other Change</string>
    <string name="hint_local">Your Change</string>
    <string name="hint_name">Name</string>
    <string name="hint_to_buy">Put on shopping list</string>
    <string name="hint_abbreviation">Abbreviation</string>
    <string name="hint_scale">Scale</string>
    <string name="hint_unit">Unit</string>
    <string name="hint_expiration_offset">Default expiration (days)</string>
    <string name="hint_description">Description</string>
    <string name="hint_duration">Duration (min)</string>
    <string name="hint_instructions">Instructions</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_no_locations">No locations.\nCreate one using the + button.</string>
    <string name="hint_no_units">No Units of Measure.\nCreate one using the + button.</string>
    <string name="hint_no_scaled_units">No Unit Amounts.\nCreate one using the + button.</string>
    <string name="hint_no_food">No Food.\nCreate one using the + button.</string>
    <string name="hint_no_grocery_chains">No grocery chains.\nCreate one using the + button.</string>
    <string name="hint_no_grocery_stores">No grocery stores.\nCreate one using the + button.</string>
    <string name="hint_no_prices">No prices.\nCreate one using the + button.</string>
    <string name="hint_no_food_to_buy">Nothing to buy</string>
    <string name="hint_no_food_in_location">No food in this location.</string>
    <string name="hint_no_food_items">No food present.</string>
    <string name="hint_minutes">minutes</string>
    <string name="hint_price">Price</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_finished">Registration finished</string>
    <string name="dialog_registering">Registering</string>
    <string name="dialog_fetching_certificate">Fetching server certificate</string>
    <string name="dialog_verifying_certificate">Checking server certificate</string>
    <string name="dialog_generating_key">Creating key</string>
    <string name="dialog_registering_key">Registering key</string>
    <string name="dialog_storing_settings">Storing settings</string>
    <string name="dialog_generating_key_failed">Generating key failed!</string>
    <string name="dialog_fetching_certificate_failed">Fetching server certificate failed!</string>
    <string name="dialog_verifying_certificate_failed">Checking server certificate failed!</string>
    <string name="dialog_registering_key_failed">Registering key failed!</string>
    <string name="dialog_storing_settings_failed">Storing settings failed!</string>
    <string name="dialog_wrong_fpr">Wrong fingerprint</string>
    <string name="dialog_ticket_reject">Server rejected ticket</string>
    <string name="dialog_server_trouble">Server is in trouble. Contact your admin.</string>
    <string name="dialog_invalid_answer">Got invalid answer from server</string>
    <string name="dialog_cert_unreadable">Certificate is unreadable</string>
    <string name="dialog_retry">RETRY</string>
    <string name="dialog_abort">ABORT</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_remove">REMOVE</string>
    <string name="dialog_store_settings">Saving settings</string>
    <string name="dialog_new_device">Create new device</string>
    <string name="dialog_new_user">Create new user</string>
    <string name="dialog_new_location">Create new location</string>
    <string name="dialog_new_food">Create new food</string>
    <string name="dialog_delete_format">Do you want to remove %1$s?</string>
    <string name="dialog_eat_format">Do you want to eat %1$s?</string>
    <string name="dialog_added">added successfully</string>
    <string name="dialog_undo">undo</string>
    <string name="dialog_delete_food">Remove %1$s as food category?</string>
    <string name="dialog_new_sync">Fully resynchronise with server</string>
    <string name="dialog_new_sync_done">Sync successful</string>
    <string name="dialog_move_item">Move to a different location</string>
    <string name="dialog_remove_crash_log">Remove this crash log?</string>
    <string name="dialog_no_barcode_result">Unknown barcode</string>
    <string name="dialog_done">Task successful</string>
    <string name="dialog_invalid_input">Invalid input</string>
    <string name="dialog_not_found">Object already deleted by someone else</string>
    <string name="dialog_delete_but_edited">The object was changed in the meantime. Refresh and check if you really want to delete it.</string>
    <string name="dialog_delete_but_dependants">The object can\'t be deleted because it is still linked to other objects. E.g. a location still contains food items.</string>
    <string name="dialog_delete_but_access_denied">Access denied.</string>
    <string name="dialog_edit_but_edited">The object was edited in the meantime. Refresh and check your change again.</string>
    <string name="dialog_create_device">Creating new device</string>
    <string name="dialog_error">An unforeseen error has occurred.</string>
    <string name="dialog_user_was_deleted">User was deleted</string>
    <string name="dialog_device_was_deleted">Device was deleted</string>
    <string name="dialog_location_was_deleted">Location was deleted</string>
    <string name="dialog_rename_location">Rename location</string>
    <string name="dialog_default_expiration_offset">Set default expiration days</string>
    <string name="dialog_default_location">Set default location</string>
</resources>