<?xml version="1.0" encoding="utf-8"?><!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->


<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:key="pref_cat_connection"
            app:title="@string/title_connection">

        <EditTextPreference
                app:key="pref_server"
                app:title="@string/title_hostname"/>

        <EditTextPreference
                app:key="pref_ca_port"
                app:title="@string/title_caport"/>

        <EditTextPreference
                app:key="pref_registration_port"
                app:title="@string/title_registration_port"/>

        <EditTextPreference
                app:key="pref_server_port"
                app:title="@string/title_server_port"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:key="pref_cat_troubleshooting"
            app:title="@string/title_troubleshooting">

        <Preference
                android:key="pref_full_sync"
                android:summary="@string/dialog_new_sync"
                android:title="@string/title_new_sync" />

        <Preference
                android:key="pref_crash_logs"
                android:title="@string/title_crash_logs" />

        <Preference
                android:key="pref_clear_search_history"
                android:title="@string/title_clear_search_history" />

    </PreferenceCategory>
</PreferenceScreen>