<?xml version="1.0" encoding="UTF-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_setup_form_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_server_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="@dimen/list_item_padding"
                android:hint="@string/hint_servername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_ca_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_server_name"
                android:hint="@string/hint_caport"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_registration_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_ca_port"
                android:hint="@string/hint_ticket_port"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_server_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_registration_port"
                android:hint="@string/hint_server_port"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_server_port"
                android:hint="@string/hint_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_user_name"
                android:hint="@string/hint_device_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_device_name"
                android:hint="@string/hint_user_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_user_id"
                android:hint="@string/hint_device_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_device_id"
                android:hint="@string/hint_fingerprint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_setup_form_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_item_padding"
                android:layout_below="@id/fragment_setup_form_fingerprint"
                android:hint="@string/hint_ticket"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:id="@+id/fragment_setup_form_loading_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_setup_form_ticket">
            <TextView
                    android:id="@+id/fragment_setup_form_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="16dp"
                    android:visibility="gone"
                    android:textSize="@dimen/dialog_text_size"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/fragment_setup_form_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:indeterminate="true"
                    app:indicatorSize="24dp"
                    app:trackThickness="2dp"
                    android:padding="16dp"
                    android:visibility="gone"
                    app:indicatorColor="@color/colorPrimary" />

            <Button
                    android:id="@+id/fragment_setup_form_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/fragment_setup_form_status"
                    android:layout_margin="8dp"
                    android:background="@color/colorPrimary"
                    android:text="@android:string/ok"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
