<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_location_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"
            android:hint="@string/hint_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:id="@+id/fragment_location_form_name_conflict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                android:id="@+id/fragment_location_form_name_conflict_original_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/hint_original"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        <TextView
                android:id="@+id/fragment_location_form_name_conflict_original_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fragment_location_form_name_conflict_original_label"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        <TextView
                android:id="@+id/fragment_location_form_name_conflict_remote_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_location_form_name_conflict_original_label"
                android:text="@string/hint_remote"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        <TextView
                android:id="@+id/fragment_location_form_name_conflict_remote_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fragment_location_form_name_conflict_remote_label"
                android:layout_below="@id/fragment_location_form_name_conflict_original_label"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        <TextView
                android:id="@+id/fragment_location_form_name_conflict_local_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_location_form_name_conflict_remote_content"
                android:text="@string/hint_local"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        <TextView
                android:id="@+id/fragment_location_form_name_conflict_local_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_location_form_name_conflict_remote_content"
                android:layout_toEndOf="@id/fragment_location_form_name_conflict_local_label"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_location_form_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding"
            android:hint="@string/hint_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>
