<?xml version="1.0" encoding="utf-8"?>
<!--
    stocks is client-server program to manage a household's food stock
    Copyright (C) 2019  The stocks developers

    This file is part of the stocks program suite.

    stocks is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    stocks is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see https://www.gnu.org/licenses/.
-->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:orientation="vertical">

        <include
                layout="@layout/text_field_conflict"
                android:id="@+id/fragment_recipe_form_name"/>

        <include
                layout="@layout/text_field_conflict"
                android:id="@+id/fragment_recipe_form_duration"/>

        <TextView
                android:id="@+id/fragment_recipe_add_label_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subheader"
                android:text="@string/title_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_recipe_add_ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_recipe_food"
                tools:itemCount="2"/>

        <ImageButton
                android:id="@+id/fragment_recipe_add_add_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/baseline_add_black_24"
                android:contentDescription="@string/action_add"/>

        <TextView
                android:id="@+id/fragment_recipe_add_label_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subheader"
                android:text="@string/title_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_recipe_add_product_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_recipe_food"
                tools:itemCount="1"/>

        <ImageButton
                android:id="@+id/fragment_recipe_add_add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/baseline_add_black_24"
                android:contentDescription="@string/action_add"/>

        <include
                layout="@layout/text_field_conflict"
                android:id="@+id/fragment_recipe_form_instructions"/>
    </LinearLayout>
</ScrollView>
